<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeActivity"
    android:background="@drawable/welcome_background">

    <ImageView
        android:id="@+id/app_logo_img"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/robotobold"
        android:textColor="#fff"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/app_logo_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView

        android:id="@+id/app_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ralewayregular"
        android:padding="20dp"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <ImageButton
        android:id="@+id/start_button"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/btn_rounded_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_descr" />





    <TextView
        android:id="@+id/start_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/lets_get_it_started"
    android:fontFamily="@font/robotobold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/start_button"
    android:textSize="16sp"
    android:textColor="#FFF"
    android:layout_marginTop="12dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"


       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        android:padding="10dp"
  >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/login_button"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_pass" />



    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/robotobold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_button"
        android:textSize="16sp"
        android:textColor="#FFF"
        android:layout_marginTop="12dp" />



    <View
        android:id="@+id/login_divider"
        android:layout_width="345dp"
        android:layout_height="2dp"
        android:layout_marginTop="700dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="4dp"
        android:id="@+id/dont_have_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_divider"
        android:fontFamily="@font/robotoregular"
        android:textColor="#fff"/>
    <TextView
        android:layout_marginTop="4dp"
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/login_divider"
        app:layout_constraintStart_toEndOf="@id/dont_have_account_text"
        android:layout_marginStart="8dp"
        android:textColor="#FFF"
        android:fontFamily="@font/robotobold"
        />

    <ImageView
        android:id="@+id/logo_outlined"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_outlined" />

</androidx.constraintlayout.widget.ConstraintLayout>