<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">


    <ImageView
        android:id="@+id/profile_avatar"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/edit_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/robotobold"
        android:text="@string/edit_profile"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_avatar"></TextView>

    <View
        android:id="@+id/profile_first_divider"
        android:layout_width="305dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_text"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/dividerColor"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <ImageButton
        android:id="@+id/achievements_btn"
        android:layout_width="305dp"
        android:layout_height="81dp"
        android:background="@drawable/profile_button"
        app:layout_constraintTop_toBottomOf="@id/profile_first_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achievements"
        android:fontFamily="@font/robotobold"
        android:textSize="27sp"
        app:layout_constraintTop_toTopOf="@id/achievements_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="#FFF"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achievements"
        android:fontFamily="@font/robotobold"
        android:textSize="37sp"
        app:layout_constraintTop_toTopOf="@id/achievements_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:textColor="@color/eight_perc_white"
        />

    <ImageButton
        android:id="@+id/statistics_btn"
        android:layout_width="305dp"
        android:layout_height="81dp"
        android:background="@drawable/profile_button"
        app:layout_constraintTop_toBottomOf="@id/achievements_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:fontFamily="@font/robotobold"
        android:textSize="27sp"
        app:layout_constraintTop_toTopOf="@id/statistics_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="#FFF"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:fontFamily="@font/robotobold"
        android:textSize="37sp"
        app:layout_constraintTop_toTopOf="@id/statistics_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:textColor="@color/eight_perc_white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>